--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
-    <!-- scripts-->
-    <script src="./script.js" defer></script>
   </head>
+
   <body>
-    <div class="alert-error open">Digite somente numeros</div>
+    <!-- scripts-->
+    <script src="./js/script.js" defer type="module"></script>
+    <div class="alert-error">Digite somente numeros</div>
     <div class="container">
       <main class="card">
         <form>
@@ -31,7 +31,7 @@
             <input id="weight" type="text" placeholder="60" />
           </div>
           <div class="input-wrapper">
-            <label for="height">Altura (m)</label>
+            <label for="height">Altura (cm)</label>
             <input id="height" type="text" placeholder="165" />
           </div>
           <button type="submit">
